Fixing page overflow

--- a/src/components/pitch/WhatWeDo/WhatWeDo.module.scss
+++ b/src/components/pitch/WhatWeDo/WhatWeDo.module.scss
@@ -5,9 +5,6 @@
 .section {
   margin-top: 250px;
   scroll-margin-top: 120px;
-  & * {
-    overflow-x: unset;
-  }
 
   article {
     &:last-child {
